--- a/sass/style.css
+++ b/sass/style.css
@@ -227,12 +227,6 @@ body a {
   color: #0F54D3 !important;
 }
 
-.mobile-navbar .dot {
-  background-color: #0F54D3;
-  border-radius: 25%;
-  display: inline-block;
-}
-
 .mobile-navbar .mobile-menu-button {
   padding-right: 20px;
   text-align: right;
@@ -289,10 +283,7 @@ body a {
 }
 
 .mobile-navbar .mobile-navbar-top {
-  -webkit-transform: translateY(100%);
-          transform: translateY(100%);
-  -webkit-transition: all 400ms cubic-bezier(0.55, 0, 0.1, 1);
-  transition: all 400ms cubic-bezier(0.55, 0, 0.1, 1);
+  background-color: #0F54D3;
 }
 
 .mobile-menu-active .mobile-menu {
@@ -306,10 +297,73 @@ body a {
           transform: translateX(0%);
 }
 
-.mobile-menu-active .mobile-navbar-top {
-  background-color: #0F54D3 !important;
-  -webkit-transform: translateY(0%);
-          transform: translateY(0%);
+.about__img {
+  /**
+        @media only screen and (min-width: 769px) {
+            &--img{
+                float: left;
+                width: 50%;
+                height: 100%;
+                
+            }
+        }
+        @media only screen and (max-width: 768px){
+            &--img{
+                float: left;
+                width: 100%;
+                height: 50%;
+            }
+        }
+        **/
+}
+
+.about__img--img {
+  float: left;
+  width: 50%;
+  height: 100%;
+}
+
+.about__title {
+  color: #0F54D3;
+  margin-bottom: 40px;
+}
+
+.about__content {
+  color: #828282;
+}
+
+.about__subtitle {
+  color: black;
+}
+
+.about__button {
+  border: 3px solid #0F54D3;
+  color: white;
+  border-radius: 30px;
+  background-color: #0F54D3;
+  padding: 5px 100px 5px 100px;
+}
+
+.about__button:hover {
+  background-color: white;
+  color: #0F54D3;
+}
+
+.services__img {
+  width: 32px;
+  height: 32px;
+}
+
+.services .splide__pagination {
+  bottom: 10px;
+}
+
+.services .splide__pagination__page {
+  background-color: #B8CAF4;
+}
+
+.services .splide__pagination .is-active {
+  background-color: #0F54D3;
 }
 
 .content {
@@ -319,45 +373,8 @@ body a {
   background-image: url("../resources/images/Visual.svg");
 }
 
-@media only screen and (min-width: 769px) {
-  .content__img--img {
-    float: left;
-    width: 50%;
-    height: 100%;
-    /*img{
-                    display: block;
-                    margin: 25px auto 0 auto;
-                    width: 80%;
-                    height: 80%;
-                }*/
-  }
-}
-
-@media only screen and (max-width: 768px) {
-  .content__img--img {
-    float: left;
-    width: 100%;
-    height: 50%;
-    /*img{
-                    display: block;
-                    float: right;
-                    margin:auto;
-                    max-width: 100%;
-                    max-height: 100%;
-                }*/
-  }
-}
-
 .content__about {
   width: 100%;
-}
-
-.content__about--title {
-  margin-bottom: 40px;
-}
-
-.content__about--title h2 {
-  color: #0F54D3;
 }
 
 .content__about--body {
@@ -404,18 +421,6 @@ body a {
   padding: 5px 100px 5px 100px;
 }
 
-.content__services .splide__pagination {
-  bottom: 10px;
-}
-
-.content__services .splide__pagination__page {
-  background-color: #B8CAF4;
-}
-
-.content__services .splide__pagination .is-active {
-  background-color: #0F54D3;
-}
-
 .content__services .title {
   color: #0F54D3;
   height: 50px;
@@ -460,6 +465,52 @@ body a {
   padding: 60px 0 60px 0;
 }
 
+.news__header {
+  color: white;
+  margin-bottom: 60px;
+}
+
+.news__item {
+  background-color: white;
+  font-size: 12px;
+  height: auto;
+}
+
+.news__img {
+  width: 100%;
+  height: 160px;
+  position: relative;
+}
+
+.news__img img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center center;
+     object-position: center center;
+  width: 100%;
+  height: 100%;
+}
+
+.news__text {
+  padding: 15px;
+}
+
+.news__date {
+  color: #828282;
+}
+
+.news__title {
+  height: 80px;
+}
+
+.news__content {
+  color: #828282;
+}
+
+.news__readmore {
+  color: #0F54D3;
+}
+
 .news .splide__pagination {
   bottom: -20px;
 }
@@ -472,70 +523,6 @@ body a {
   background-color: white;
 }
 
-.news .newsbox .title {
-  color: white;
-  margin-bottom: 60px;
-}
-
-.news .newsbox .item {
-  background-color: white;
-  font-size: 12px;
-  height: auto;
-}
-
-.news .newsbox .item__img {
-  width: 100%;
-  height: 160px;
-  position: relative;
-}
-
-.news .newsbox .item__img img {
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: center center;
-     object-position: center center;
-  width: 100%;
-  height: 100%;
-}
-
-.news .newsbox .item__text {
-  padding: 10px 20px 10px 20px;
-  font-size: 16px;
-}
-
-.news .newsbox .item__text--texttitle {
-  height: 80px;
-}
-
-@media only screen and (max-width: 768px) {
-  .news .newsbox .item__text--textdate {
-    color: #828282;
-  }
-  .news .newsbox .item__text--textcontent {
-    padding-bottom: 50px;
-    margin-top: 10px;
-    color: #828282;
-  }
-  .news .newsbox .item__text--textread {
-    color: #0F54D3;
-  }
-}
-
-@media only screen and (min-width: 769px) {
-  .news .newsbox .item__text--textdate {
-    color: #828282;
-  }
-  .news .newsbox .item__text--textcontent {
-    padding-bottom: 5px;
-    margin-top: 20px;
-    color: #828282;
-  }
-  .news .newsbox .item__text--textread {
-    padding-bottom: 10px;
-    color: #0F54D3;
-  }
-}
-
 .testimonials {
   height: 100%;
   width: 100%;
@@ -543,12 +530,12 @@ body a {
   text-align: center;
 }
 
-.testimonials .text {
+.testimonials__text {
   text-align: center;
   margin: 80px 20% 0 20%;
 }
 
-.testimonials .author {
+.testimonials__author {
   margin: 0 20% 0 20%;
   text-align: center;
   color: grey !important;
@@ -584,22 +571,18 @@ body a {
   margin-bottom: 24px;
 }
 
-.footer .companyname {
-  padding-right: 20%;
-}
-
-.footer .title {
+.footer__title {
   color: #0F54D3;
   padding-bottom: 20px;
 }
 
-.footer .line {
+.footer__line {
   margin: 30px 0 30px 0;
   width: 100%;
   border: solid #b9b9b9 1px;
 }
 
-.footer .icon {
+.footer__icon {
   float: right;
   margin-right: 24px;
   width: 24px;
