--- a/sass/style.scss
+++ b/sass/style.scss
@@ -24,7 +24,7 @@ body{
     h1{
         font-weight: 700;
     }
-    h2{
+    h2, h4{
         font-weight: 700;
     }
     h5, p, a{
@@ -33,6 +33,7 @@ body{
 
     p{
         font-size: 14px;
+        color: $clr-grey-1;
     }
 
     a{
@@ -40,31 +41,82 @@ body{
     }
 }
 
-.header-padding{
-    padding-top: 30px;
-}
 
-.scrollbutton{
-    width: 50px;
-    height:50px;
-    margin: 0px auto;
-    border: solid white 2px;
-    background-color: white;
-    border-radius: 50%;
-    box-shadow: 2px 2px 4px #000000;
-    margin-bottom: -25px;
+.header{
+    background-image: linear-gradient(rgba(15,84,211, 0.5), rgba(15,84,211, 0.5)), url('../resources/images/Harbor.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    color: white;
 
-}
-.scrollbutton:hover{
-    width: 50px;
-    height:50px;
-    margin: 0px auto;
-    border: solid white 2px;
-    background-color: $clr-blue-2;
-    border-radius: 50%;
-    box-shadow: 2px 2px 4px #000000;
-    margin-bottom: -25px;
-    i{
+    &__scrollbutton{
+        width: 50px;
+        height:50px;
+        margin: 0px auto;
+        border: solid white 2px;
+        background-color: white;
+        border-radius: 50%;
+        box-shadow: 2px 2px 4px #000000;
+        margin-bottom: -25px;
+    
+        &:hover{
+            background-color: $clr-blue-2;
+            i{
+                color: white;
+            }
+        }
+    
+    }
+    &__contactbutton{
+        border: 3px solid white;
+        width: 150px;
+        border-radius: 30px;
+        background-color: white;
+        color: $clr-blue-2 !important;
+        &:hover{
+            background-color: $clr-blue-2;
+            color: white;
+        }
+    }
+
+    &__nav{
+        height: 75px;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        text-align: center;
+
+        ul{
+            list-style-type: none;
+            text-align: center;
+            margin-left: 0;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            margin-bottom: 0;
+        }
+
+        li{
+            display: inline;
+        }
+        a, a:hover, a:focus, a:active {
+            text-decoration: none;
+            color: inherit;
+            display: block;
+        }
+        nav{
+            display: flex;
+            flex-wrap: wrap;
+        }
+    }
+    &__logo{
+        display: block;
+        height: 64px;
+        width: 64px;
+
+    }    
+
+    &__content{
         color: white;
     }
 }
@@ -80,6 +132,7 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    color: white;
 
     @media only screen and (max-width: 991px) {
         &__navbar{
@@ -87,21 +140,6 @@ body{
         }
     }
 
-    .contact-button{
-        border: 3px solid white;
-        width: 150px;
-        border-radius: 30px;
-        background-color: white;
-        color: $clr-blue-2 !important;
-        
-    }
-    .contact-button:hover{
-        border: 3px solid white;
-        width: 150px;
-        border-radius: 30px;
-        background-color: $clr-blue-2;
-        color: white !important;
-    }
     &__navbar{
         height: 75px;
         display: flex;
@@ -145,7 +183,6 @@ body{
         .main-menu{
             ul {
                 text-align: center;
-                color: white;
                 margin-left: 0;
                 display: flex;
                 flex-wrap: wrap;
@@ -158,7 +195,6 @@ body{
         .contact-menu{
             ul {
                 text-align: center;
-                color: white;
                 margin-left: 0;
                 display: flex;
                 flex-wrap: wrap;
@@ -167,7 +203,6 @@ body{
             }
             a{
                 margin-top: 10px;
-                color: white;
             }
 
             
@@ -178,11 +213,10 @@ body{
 
     &__text{
         width: auto;
+        color: white;
         min-width: 90%;
         margin: 75px 0 75px 0;
-        color:white;
         &--title{
-            color: white;
         }
         
         .line{
@@ -281,6 +315,8 @@ body{
 }
 
 .about{
+    margin-top: 100px;
+    margin-bottom: 100px;
     &__img{
         &--img{
             float: left;
@@ -314,6 +350,7 @@ body{
         color: $clr-grey-1
     }
     &__subtitle{
+        margin-top: 30px;
         color: black;
     }
     &__button{
@@ -329,24 +366,23 @@ body{
     }
 }
 .services{
+    margin-bottom: 100px;
     &__item{
-
+        margin: 20px 20px 20px 0;
     }
     &__img{
         width: 32px;
         height: 32px;
+        margin-bottom: 30px;
     }
     &__title{
-
-    }
-    &__subtitle{
-
+        margin-bottom: 30px;
     }
     &__content{
-
+    margin: 30px 0 30px 0;
     }
-    &__moreinfo{
-
+    &--blue{
+        color: $clr-blue-2;
     }
 
     .splide {
@@ -363,104 +399,6 @@ body{
     }
 }
 
-.content{
-    width:100%;
-    height: auto;
-    margin: 50px 0px;
-    background-image: url("../resources/images/Visual.svg");
-
-    &__about{
-        width:100%;
-
-
-
-    
-        &--body{
-            color: $clr-grey-1;
-            h5{
-                padding-top: 30px;
-                color: black;
-            }
-            text-align: left; 
-            float: left;
-            padding-bottom: 40px;
-        }
-        &--button{
-                
-            width: 100%;
-            padding: 0 0 50px 0;
-            @media only screen and (min-width: 993px) {
-                    
-            }
-            @media only screen and (max-width: 992px) {
-                text-align: center;
-            }
-
-            a{
-                color: white;
-                width: 200px;
-                height: 50px;
-            }
-
-            .getstarted{
-                border: 3px solid $clr-blue-2;
-                border-radius: 30px;
-                background-color: $clr-blue-2;
-                padding: 5px 100px 5px 100px;
-            
-            }
-            .getstarted:hover{
-                border: 3px solid $clr-blue-2;
-                border-radius: 30px;
-                background-color: white;
-                color: $clr-blue-2;
-                padding: 5px 100px 5px 100px;
-            }
-            
-        }
-        
-    }
- 
-
-    &__services{
-        
-        .title{
-            color: $clr-blue-2;
-            height: 50px;
-            margin: 50px 0 40px 0;
-
-        }
-
-        &--img{
-            margin-top: 30px;
-            margin-bottom: 20px;
-            img{
-                width: 32px;
-                height: 32px;
-            }
-        }
-        &--service{
-            padding-right: 7%;
-            
-        }
-        &--title{
-            height: 50px;
-            margin: 50px 0 40px 0;
-        }
-
-        &--text{
-            width: 100%;
-            color: $clr-grey-1;
-        }
-
-        &--moreinfo{
-            margin: 40px 0 100px 0;
-            color: $clr-blue-2;
-        }
-        
-        
-    }
-}
 .news{
     background-image: linear-gradient($clr-blue-2, $clr-blue-2), url('../resources/images/harbour-boat-sea-plane.jpg');
     background-repeat: no-repeat;
@@ -495,10 +433,12 @@ body{
     }
     &__date{
         color: $clr-grey-1;
+        font-style: italic;
     }
 
     &__title{
         height: 80px;
+        color: black;
     }
 
     &__content{
