--- a/sass/style.scss
+++ b/sass/style.scss
@@ -27,7 +27,7 @@ body{
     h2, h4{
         font-weight: 700;
     }
-    h5, p, a{
+    h5, a{
         font-weight: 600;
     }
 
@@ -49,6 +49,11 @@ body{
     background-position: center;
     color: white;
 
+    min-height: 50vh;
+    height: auto;
+    &__text{
+        padding-top: 100px;
+    }
     &__scrollbutton{
         width: 50px;
         height:50px;
@@ -75,11 +80,15 @@ body{
         color: $clr-blue-2 !important;
         &:hover{
             background-color: $clr-blue-2;
-            color: white;
+            color: white !important;
         }
     }
 
     &__nav{
+        @media only screen and (max-width: 992px){
+            opacity: 0;
+        }
+        opacity: 1;
         height: 75px;
         display: flex;
         flex-wrap: wrap;
@@ -108,6 +117,10 @@ body{
             display: flex;
             flex-wrap: wrap;
         }
+        
+        &--right{
+            float: right;
+        }
     }
     &__logo{
         display: block;
@@ -118,114 +131,22 @@ body{
 
     &__content{
         color: white;
+        @media only screen and (min-width: 768px) {
+            width: 70%;
+        }
+        @media only screen and (max-width: 767px) {
+            width: 100%;
+        }
+
+    }
+
+    &__line{
+        border: solid white 1px;
+        width: 50%;
+        margin: 20px 0;
     }
 }
 
-.header{
-    width: 100%;
-    min-height: 500px;
-    height: auto;
-    margin-left: auto;
-    margin-right: auto;
-    //padding-bottom: 100px;
-    background-image: linear-gradient(rgba(15,84,211, 0.5), rgba(15,84,211, 0.5)), url('../resources/images/Harbor.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    color: white;
-
-    @media only screen and (max-width: 991px) {
-        &__navbar{
-            display: none !important;
-        }
-    }
-
-    &__navbar{
-        height: 75px;
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        ul{
-
-            list-style-type: none;
-        }
-
-        li{
-
-            display: inline;
-        }
-        a, a:hover, a:focus, a:active {
-            text-decoration: none;
-            color: inherit;
-            display: block;
-        }
-        nav{
-            display: flex;
-            flex-wrap: wrap;
-            align-items: center;
-
-    
-
-        }
-
-        
-        &--logo{
-            img{
-                display: block;
-                margin-left: auto;
-                margin-right: auto;
-                width: 75px;
-                height: 75px;
-    
-            }
-        }    
-        
-        .main-menu{
-            ul {
-                text-align: center;
-                margin-left: 0;
-                display: flex;
-                flex-wrap: wrap;
-                gap: 20px;
-                margin-bottom: 0;
-            }
-
-        }
-
-        .contact-menu{
-            ul {
-                text-align: center;
-                margin-left: 0;
-                display: flex;
-                flex-wrap: wrap;
-                gap: 20px;
-                margin-bottom: 0;
-            }
-            a{
-                margin-top: 10px;
-            }
-
-            
-        }
-        
-    }
-
-
-    &__text{
-        width: auto;
-        color: white;
-        min-width: 90%;
-        margin: 75px 0 75px 0;
-        &--title{
-        }
-        
-        .line{
-            margin: 30px 0 30px 0;
-            width: 50%;
-            border: solid white 1px;
-        }
-    }
-}
 @media only screen and (min-width: 992px) {
     .mobile-navbar{
         display: none !important;
@@ -322,25 +243,7 @@ body{
             float: left;
             width: 50%;
             height: 100%;
-            
         }
-        /**
-        @media only screen and (min-width: 769px) {
-            &--img{
-                float: left;
-                width: 50%;
-                height: 100%;
-                
-            }
-        }
-        @media only screen and (max-width: 768px){
-            &--img{
-                float: left;
-                width: 100%;
-                height: 50%;
-            }
-        }
-        **/
     }
     &__title{
         color: $clr-blue-2;
@@ -377,12 +280,12 @@ body{
     }
     &__title{
         margin-bottom: 30px;
+        &--blue{
+            color: $clr-blue-2;
+        }
     }
     &__content{
     margin: 30px 0 30px 0;
-    }
-    &--blue{
-        color: $clr-blue-2;
     }
 
     .splide {
