--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,6 @@
 $clr-blue-1: #B8CAF4;
 $clr-blue-2: #0F54D3;
+$clr-blue-3: rgba(184, 216, 241, 0.295);
 
 $clr-grey-1: #828282;
 
@@ -49,10 +50,11 @@ body{
     background-position: center;
     color: white;
 
-    min-height: 50vh;
+    min-height: 60vh;
     height: auto;
     &__text{
-        padding-top: 100px;
+        padding-top: 150px;
+        padding-bottom: 150px;
     }
     &__scrollbutton{
         width: 50px;
@@ -86,8 +88,9 @@ body{
 
     &__nav{
         @media only screen and (max-width: 992px){
-            opacity: 0;
+            display: none !important;
         }
+        padding-top: 30px;
         opacity: 1;
         height: 75px;
         display: flex;
@@ -101,7 +104,7 @@ body{
             margin-left: 0;
             display: flex;
             flex-wrap: wrap;
-            gap: 20px;
+            gap: 50px;
             margin-bottom: 0;
         }
 
@@ -141,18 +144,16 @@ body{
     }
 
     &__line{
-        border: solid white 1px;
+        border-top: solid white 1px;
         width: 50%;
         margin: 20px 0;
     }
 }
 
-@media only screen and (min-width: 992px) {
-    .mobile-navbar{
+.mobile-menu{
+    @media only screen and (min-width: 992px) {
         display: none !important;
     }
-}
-.mobile-navbar{
     z-index: 2;
     position: fixed;
     transition: all 500ms linear;
@@ -163,24 +164,27 @@ body{
     justify-content: flex-end;
     align-content: space-between;
 
-    .contact-button{
+    &__contactbutton{
         border: 1px solid white;
         width: 150px;
         border-radius: 30px;
         background-color: white;
         text-align: center;
-        margin: 0px auto;
-        color: $clr-blue-2 !important;
     }
 
-    .mobile-menu-button{
+    &__button{
         padding-right: 20px;
         text-align: right;
         color: white;
         width:100%;
         height: 100%;
     }
-    .mobile-menu{
+
+    &__top{
+        background-color: $clr-blue-2;
+
+    }
+    &__menu{
         border: 1px $clr-blue-2 solid;
         border-radius: 0 0 0 20px;
         user-select: none;
@@ -188,28 +192,27 @@ body{
         float: right;
         opacity: 0;
         top: 61px;
-        width: auto;
-        height: auto;
         color: white;
         background-color: $clr-blue-2;
-        text-align: right;
         padding: 0 20px 20px 20px;
         transform: translateX(100%);
         transition: all 400ms cubic-bezier(0.55, 0, 0.1, 1);
-        a, a:hover, a:focus, a:active {
-            text-decoration: none;
-            color: inherit;
-            display: block;
-            color: white;
-        }
+
         ul li{
             list-style-type: none;
             list-style-position:inside;
+            a, a:hover, a:focus, a:active {
+                text-decoration: none;
+                color: inherit;
+                display: block;
+                color: white;
+            }
 
         }
         li{
             border-top: 2px solid white;
         }
+
     }
     .hamburger{
         padding-bottom: 10px;
@@ -220,25 +223,34 @@ body{
     .mobile-navbar-top{
         background-color: $clr-blue-2;
     }
-
-    
+            
+    &--active & {
+        &__menu{
+            opacity: 1 !important;
+            user-select: all !important;
+            pointer-events: all !important;
+            transform: translateX(0%) !important;
+        }
+    }  
 }
-
-
-.mobile-menu-active{
-    .mobile-menu{
-        opacity: 1 !important;
-        user-select: all !important;
-        pointer-events: all !important;
-        transform: translateX(0%);
-    }
-    
+.background-1{
+    background-image: url("../resources/images/background1.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
-
+.background-2{
+    background-image: url("../resources/images/background2.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center top;
+}
 .about{
     margin-top: 100px;
-    margin-bottom: 100px;
+    padding-bottom: 200px;
     &__img{
+        @media only screen and (max-width: 992px){
+            margin-top: 100px;
+        }
         &--img{
             float: left;
             width: 50%;
@@ -250,7 +262,8 @@ body{
         margin-bottom: 40px;
     }
     &__content{
-        color: $clr-grey-1
+        color: $clr-grey-1;
+        margin-bottom: 50px;
     }
     &__subtitle{
         margin-top: 30px;
@@ -261,7 +274,7 @@ body{
         color: white;
         border-radius: 30px;
         background-color: $clr-blue-2;
-        padding: 5px 100px 5px 100px;
+        padding: 5px 80px 5px 80px;
         &:hover{
             background-color: white;
             color: $clr-blue-2;
@@ -269,7 +282,8 @@ body{
     }
 }
 .services{
-    margin-bottom: 100px;
+   
+    padding-bottom: 100px;
     &__item{
         margin: 20px 20px 20px 0;
     }
@@ -303,7 +317,7 @@ body{
 }
 
 .news{
-    background-image: linear-gradient($clr-blue-2, $clr-blue-2), url('../resources/images/harbour-boat-sea-plane.jpg');
+    background-image: linear-gradient(rgba(15,84,211, 0.85), rgba(15,84,211, 0.85)), url('../resources/images/harbour-boat-sea-plane.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -316,7 +330,6 @@ body{
 
     &__item{
         background-color: white;
-        font-size: 12px;
         height: auto;
     }
 
@@ -341,6 +354,8 @@ body{
 
     &__title{
         height: 80px;
+        font-size: 16px;
+        font-weight: 700;
         color: black;
     }
 
@@ -367,10 +382,8 @@ body{
     
 }
 .testimonials{
-    height: 100%;
-    width: 100%;
-    color: $clr-grey-1;
     text-align: center;
+    padding-bottom: 300px;
     &__text{
         text-align: center;
         margin: 80px 20% 0 20%;
@@ -389,6 +402,9 @@ body{
             }
             .is-active {
                 background-color: $clr-blue-2;
+            }
+            li{
+                margin: 0px 10px;
             }
         }
     
@@ -412,13 +428,16 @@ body{
 
 .footer{
     font-size: 13px;
-    padding-top: 10%;
     color: $clr-grey-1;
-    margin-bottom: 24px;
+    padding-bottom: 24px;
 
     &__title{
         color: $clr-blue-2;
         padding-bottom: 20px;
+       
+    }
+    &__company{
+        padding-right: 50px;
     }
 
     &__line{
@@ -433,6 +452,4 @@ body{
         width: 24px;
         height: 24px;
     }
-    
 }
-
