--- a/sass/style.css
+++ b/sass/style.css
@@ -41,12 +41,13 @@ body a {
   background-size: cover;
   background-position: center;
   color: white;
-  min-height: 50vh;
+  min-height: 60vh;
   height: auto;
 }
 
 .header__text {
-  padding-top: 100px;
+  padding-top: 150px;
+  padding-bottom: 150px;
 }
 
 .header__scrollbutton {
@@ -83,6 +84,7 @@ body a {
 }
 
 .header__nav {
+  padding-top: 30px;
   opacity: 1;
   height: 75px;
   display: -webkit-box;
@@ -98,7 +100,7 @@ body a {
 
 @media only screen and (max-width: 992px) {
   .header__nav {
-    opacity: 0;
+    display: none !important;
   }
 }
 
@@ -111,7 +113,7 @@ body a {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  gap: 20px;
+  gap: 50px;
   margin-bottom: 0;
 }
 
@@ -160,18 +162,12 @@ body a {
 }
 
 .header__line {
-  border: solid white 1px;
+  border-top: solid white 1px;
   width: 50%;
   margin: 20px 0;
 }
 
-@media only screen and (min-width: 992px) {
-  .mobile-navbar {
-    display: none !important;
-  }
-}
-
-.mobile-navbar {
+.mobile-menu {
   z-index: 2;
   position: fixed;
   -webkit-transition: all 500ms linear;
@@ -189,17 +185,21 @@ body a {
       align-content: space-between;
 }
 
-.mobile-navbar .contact-button {
+@media only screen and (min-width: 992px) {
+  .mobile-menu {
+    display: none !important;
+  }
+}
+
+.mobile-menu__contactbutton {
   border: 1px solid white;
   width: 150px;
   border-radius: 30px;
   background-color: white;
   text-align: center;
-  margin: 0px auto;
-  color: #0F54D3 !important;
 }
 
-.mobile-navbar .mobile-menu-button {
+.mobile-menu__button {
   padding-right: 20px;
   text-align: right;
   color: white;
@@ -207,7 +207,11 @@ body a {
   height: 100%;
 }
 
-.mobile-navbar .mobile-menu {
+.mobile-menu__top {
+  background-color: #0F54D3;
+}
+
+.mobile-menu__menu {
   border: 1px #0F54D3 solid;
   border-radius: 0 0 0 20px;
   -webkit-user-select: none;
@@ -218,11 +222,8 @@ body a {
   float: right;
   opacity: 0;
   top: 61px;
-  width: auto;
-  height: auto;
   color: white;
   background-color: #0F54D3;
-  text-align: right;
   padding: 0 20px 20px 20px;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
@@ -230,48 +231,67 @@ body a {
   transition: all 400ms cubic-bezier(0.55, 0, 0.1, 1);
 }
 
-.mobile-navbar .mobile-menu a, .mobile-navbar .mobile-menu a:hover, .mobile-navbar .mobile-menu a:focus, .mobile-navbar .mobile-menu a:active {
+.mobile-menu__menu ul li {
+  list-style-type: none;
+  list-style-position: inside;
+}
+
+.mobile-menu__menu ul li a, .mobile-menu__menu ul li a:hover, .mobile-menu__menu ul li a:focus, .mobile-menu__menu ul li a:active {
   text-decoration: none;
   color: inherit;
   display: block;
   color: white;
 }
 
-.mobile-navbar .mobile-menu ul li {
-  list-style-type: none;
-  list-style-position: inside;
-}
-
-.mobile-navbar .mobile-menu li {
+.mobile-menu__menu li {
   border-top: 2px solid white;
 }
 
-.mobile-navbar .hamburger {
+.mobile-menu .hamburger {
   padding-bottom: 10px;
 }
 
-.mobile-navbar .hamburger:hover {
+.mobile-menu .hamburger:hover {
   opacity: 1;
 }
 
-.mobile-navbar .mobile-navbar-top {
+.mobile-menu .mobile-navbar-top {
   background-color: #0F54D3;
 }
 
-.mobile-menu-active .mobile-menu {
+.mobile-menu--active .mobile-menu__menu {
   opacity: 1 !important;
   -webkit-user-select: all !important;
      -moz-user-select: all !important;
       -ms-user-select: all !important;
           user-select: all !important;
   pointer-events: all !important;
-  -webkit-transform: translateX(0%);
-          transform: translateX(0%);
+  -webkit-transform: translateX(0%) !important;
+          transform: translateX(0%) !important;
+}
+
+.background-1 {
+  background-image: url("../resources/images/background1.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.background-2 {
+  background-image: url("../resources/images/background2.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center top;
 }
 
 .about {
   margin-top: 100px;
-  margin-bottom: 100px;
+  padding-bottom: 200px;
+}
+
+@media only screen and (max-width: 992px) {
+  .about__img {
+    margin-top: 100px;
+  }
 }
 
 .about__img--img {
@@ -287,6 +307,7 @@ body a {
 
 .about__content {
   color: #828282;
+  margin-bottom: 50px;
 }
 
 .about__subtitle {
@@ -299,7 +320,7 @@ body a {
   color: white;
   border-radius: 30px;
   background-color: #0F54D3;
-  padding: 5px 100px 5px 100px;
+  padding: 5px 80px 5px 80px;
 }
 
 .about__button:hover {
@@ -308,7 +329,7 @@ body a {
 }
 
 .services {
-  margin-bottom: 100px;
+  padding-bottom: 100px;
 }
 
 .services__item {
@@ -346,8 +367,8 @@ body a {
 }
 
 .news {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#0F54D3), to(#0F54D3)), url("../resources/images/harbour-boat-sea-plane.jpg");
-  background-image: linear-gradient(#0F54D3, #0F54D3), url("../resources/images/harbour-boat-sea-plane.jpg");
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(15, 84, 211, 0.85)), to(rgba(15, 84, 211, 0.85))), url("../resources/images/harbour-boat-sea-plane.jpg");
+  background-image: linear-gradient(rgba(15, 84, 211, 0.85), rgba(15, 84, 211, 0.85)), url("../resources/images/harbour-boat-sea-plane.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -361,7 +382,6 @@ body a {
 
 .news__item {
   background-color: white;
-  font-size: 12px;
   height: auto;
 }
 
@@ -391,6 +411,8 @@ body a {
 
 .news__title {
   height: 80px;
+  font-size: 16px;
+  font-weight: 700;
   color: black;
 }
 
@@ -415,10 +437,8 @@ body a {
 }
 
 .testimonials {
-  height: 100%;
-  width: 100%;
-  color: #828282;
   text-align: center;
+  padding-bottom: 300px;
 }
 
 .testimonials__text {
@@ -444,6 +464,10 @@ body a {
   background-color: #0F54D3;
 }
 
+.testimonials .splide__pagination li {
+  margin: 0px 10px;
+}
+
 .img-responsive {
   max-width: 100%;
   width: auto;
@@ -457,14 +481,17 @@ body a {
 
 .footer {
   font-size: 13px;
-  padding-top: 10%;
   color: #828282;
-  margin-bottom: 24px;
+  padding-bottom: 24px;
 }
 
 .footer__title {
   color: #0F54D3;
   padding-bottom: 20px;
+}
+
+.footer__company {
+  padding-right: 50px;
 }
 
 .footer__line {
