--- a/sass/style.scss
+++ b/sass/style.scss
@@ -19,7 +19,7 @@ $clr-grey-1: #828282;
 }
 
 body{
-
+    letter-spacing: 1px;
     font-family: 'Open Sans';
     line-height: 2rem;
     h1{
@@ -383,14 +383,16 @@ body{
 }
 .testimonials{
     text-align: center;
-    padding-bottom: 300px;
+    padding-bottom: 400px;
     &__text{
         text-align: center;
-        margin: 80px 20% 0 20%;
+        font-size: 20px;
+        margin: 100px 10% 0 10%;
     }
     &__author{
-        margin: 0 20% 0 20%;
         text-align: center;
+        font-size: 14px;
+        margin-top: 20px;
         color: grey !important;
 
     }
@@ -441,9 +443,20 @@ body{
     }
 
     &__line{
-        margin: 30px 0 30px 0;
+        margin: 50px 0px;
         width: 100%;
         border: solid #b9b9b9 1px;
+    }
+
+    &__link{
+        font-weight: 400;
+        color: $clr-grey-1;
+        &:hover{
+            color: $clr-blue-2;
+        }
+        &--active{
+            color: $clr-blue-2;
+        }
     }
 
     &__icon{
