--- a/sass/style.scss
+++ b/sass/style.scss
@@ -20,8 +20,9 @@ $clr-grey-1: #828282;
 
 body{
     letter-spacing: 1px;
+    overflow-x: hidden;
     font-family: 'Open Sans';
-    line-height: 2rem;
+    line-height: 2;
     h1{
         font-weight: 700;
     }
@@ -33,13 +34,15 @@ body{
     }
 
     p{
-        font-size: 14px;
+        font-size: 13px;
+        font-weight: 500;
         color: $clr-grey-1;
     }
 
     a{
         text-decoration: none;
     }
+
 }
 
 
@@ -65,11 +68,16 @@ body{
         border-radius: 50%;
         box-shadow: 2px 2px 4px #000000;
         margin-bottom: -25px;
-    
+        transition: ease-in 200ms;
+        svg{
+            width: 50%;
+            height: 70%;
+            margin: 9px 11px;
+        }
         &:hover{
             background-color: $clr-blue-2;
-            i{
-                color: white;
+            svg{
+                fill: white;
             }
         }
     
@@ -80,6 +88,7 @@ body{
         border-radius: 30px;
         background-color: white;
         color: $clr-blue-2 !important;
+        transition: ease-in 200ms;
         &:hover{
             background-color: $clr-blue-2;
             color: white !important;
@@ -110,6 +119,16 @@ body{
 
         li{
             display: inline;
+            transition: 100ms linear;
+
+        }
+        &--active{
+            border-bottom: 1px solid white;
+        }
+        li:hover{
+            -webkit-transform: scale(1.2);
+            -ms-transform: scale(1.2);
+            transform: scale(1.2);
         }
         a, a:hover, a:focus, a:active {
             text-decoration: none;
@@ -134,10 +153,10 @@ body{
 
     &__content{
         color: white;
-        @media only screen and (min-width: 768px) {
+        @media only screen and (min-width:1201px) {
             width: 70%;
         }
-        @media only screen and (max-width: 767px) {
+        @media only screen and (max-width: 1200px) {
             width: 100%;
         }
 
@@ -160,7 +179,6 @@ body{
     width: 100%;
     height: 61px;
     flex-direction: column;
-    //background-color:$clr-blue-2 !important;
     justify-content: flex-end;
     align-content: space-between;
 
@@ -275,6 +293,7 @@ body{
         border-radius: 30px;
         background-color: $clr-blue-2;
         padding: 5px 80px 5px 80px;
+        transition: ease-in 200ms;
         &:hover{
             background-color: white;
             color: $clr-blue-2;
@@ -330,7 +349,10 @@ body{
 
     &__item{
         background-color: white;
-        height: auto;
+        margin: 15px 15px;
+        &:hover{
+            box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
+        }
     }
 
     &__img{
@@ -360,12 +382,23 @@ body{
     }
 
     &__content{
-        color: $clr-grey-1
+        color: $clr-grey-1;
+        height: 100px;
+        
+        text-overflow: ellipsis;
+        overflow: hidden;
+
+        padding-bottom: 10px;
 
     }
 
     &__readmore{
         color: $clr-blue-2;
+        img{
+            width: 13px;
+            height: 13px;
+            margin: 9px 0px;
+        }
     }
     .splide {
         &__pagination {
@@ -383,6 +416,9 @@ body{
 }
 .testimonials{
     text-align: center;
+    @media only screen and (max-width: 768px){
+        padding-bottom: 150px;
+    }
     padding-bottom: 400px;
     &__text{
         text-align: center;
