--- a/sass/style.css
+++ b/sass/style.css
@@ -224,18 +224,23 @@ body a {
 }
 
 .mobile-menu__button {
-  padding-right: 20px;
   text-align: right;
   color: white;
-  width: 100%;
-  height: 100%;
 }
 
 .mobile-menu__top {
   background-color: #0F54D3;
 }
 
+.mobile-menu__darker {
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  opacity: 0;
+}
+
 .mobile-menu__menu {
+  height: 100vh;
+  width: 60vw;
   border: 1px #0F54D3 solid;
   border-radius: 0 0 0 20px;
   -webkit-user-select: none;
@@ -260,11 +265,11 @@ body a {
   list-style-position: inside;
 }
 
-.mobile-menu__menu ul li a, .mobile-menu__menu ul li a:hover, .mobile-menu__menu ul li a:focus, .mobile-menu__menu ul li a:active {
+.mobile-menu__menu ul li a {
   text-decoration: none;
   color: inherit;
   display: block;
-  color: white;
+  margin: 10px auto;
 }
 
 .mobile-menu__menu li {
@@ -272,7 +277,7 @@ body a {
 }
 
 .mobile-menu .hamburger {
-  padding-bottom: 10px;
+  padding: 12px !important;
 }
 
 .mobile-menu .hamburger:hover {
@@ -292,6 +297,17 @@ body a {
   pointer-events: all !important;
   -webkit-transform: translateX(0%) !important;
           transform: translateX(0%) !important;
+}
+
+.mobile-menu--active .mobile-menu__darker {
+  background: black;
+  opacity: 0.5 !important;
+  width: 100%;
+  height: 100vh;
+  -webkit-transition: opacity 400ms;
+  transition: opacity 400ms;
+  -webkit-transform: translateX(0) !important;
+          transform: translateX(0) !important;
 }
 
 .background-1 {
