--- a/sass/style.scss
+++ b/sass/style.scss
@@ -191,18 +191,21 @@ body{
     }
 
     &__button{
-        padding-right: 20px;
         text-align: right;
         color: white;
-        width:100%;
-        height: 100%;
     }
 
     &__top{
         background-color: $clr-blue-2;
 
     }
+    &__darker{
+        transform: translateX(100%);
+        opacity: 0;
+    }
     &__menu{
+        height: 100vh;
+        width: 90vw;
         border: 1px $clr-blue-2 solid;
         border-radius: 0 0 0 20px;
         user-select: none;
@@ -219,11 +222,11 @@ body{
         ul li{
             list-style-type: none;
             list-style-position:inside;
-            a, a:hover, a:focus, a:active {
+            a{
                 text-decoration: none;
                 color: inherit;
                 display: block;
-                color: white;
+                margin: 10px auto;
             }
 
         }
@@ -233,7 +236,7 @@ body{
 
     }
     .hamburger{
-        padding-bottom: 10px;
+        padding: 12px !important;
     }
     .hamburger:hover{
         opacity: 1;
@@ -248,6 +251,14 @@ body{
             user-select: all !important;
             pointer-events: all !important;
             transform: translateX(0%) !important;
+        }
+        &__darker{
+            background: black;
+            opacity: 0.5 !important;
+            width: 100%;
+            height: 100vh;
+            transition: opacity 400ms;
+            transform: translateX(0) !important;
         }
     }  
 }
