--- a/sass/style.css
+++ b/sass/style.css
@@ -194,8 +194,6 @@ body a {
 .mobile-menu {
   z-index: 2;
   position: fixed;
-  -webkit-transition: all 500ms linear;
-  transition: all 500ms linear;
   width: 100%;
   height: 61px;
   -webkit-box-orient: vertical;
@@ -216,11 +214,11 @@ body a {
 }
 
 .mobile-menu__contactbutton {
-  border: 1px solid white;
   width: 150px;
   border-radius: 30px;
   background-color: white;
   text-align: center;
+  margin: 10% auto;
 }
 
 .mobile-menu__button {
@@ -236,13 +234,13 @@ body a {
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
   opacity: 0;
+  position: absolute;
+  z-index: -1;
 }
 
 .mobile-menu__menu {
   height: 100vh;
-  width: 60vw;
-  border: 1px #0F54D3 solid;
-  border-radius: 0 0 0 20px;
+  width: 90%;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
@@ -253,7 +251,6 @@ body a {
   top: 61px;
   color: white;
   background-color: #0F54D3;
-  padding: 0 20px 20px 20px;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
   -webkit-transition: all 400ms cubic-bezier(0.55, 0, 0.1, 1);
@@ -323,9 +320,18 @@ body a {
   background-position: center top;
 }
 
-.about {
-  margin-top: 100px;
-  padding-bottom: 200px;
+@media only screen and (max-width: 576px) {
+  .about {
+    margin-top: 20px;
+    padding-bottom: 20px;
+  }
+}
+
+@media only screen and (min-width: 577px) {
+  .about {
+    margin-top: 100px;
+    padding-bottom: 150px;
+  }
 }
 
 @media only screen and (max-width: 992px) {
@@ -360,9 +366,21 @@ body a {
   color: white;
   border-radius: 30px;
   background-color: #0F54D3;
-  padding: 5px 80px 5px 80px;
   -webkit-transition: ease-in 200ms;
   transition: ease-in 200ms;
+}
+
+@media only screen and (max-width: 576px) {
+  .about__button {
+    padding: 5px 40px 5px 40px;
+    margin: auto 13%;
+  }
+}
+
+@media only screen and (min-width: 577px) {
+  .about__button {
+    padding: 5px 80px 5px 80px;
+  }
 }
 
 .about__button:hover {
