--- a/sass/style.scss
+++ b/sass/style.scss
@@ -175,7 +175,6 @@ body{
     }
     z-index: 2;
     position: fixed;
-    transition: all 500ms linear;
     width: 100%;
     height: 61px;
     flex-direction: column;
@@ -183,11 +182,11 @@ body{
     align-content: space-between;
 
     &__contactbutton{
-        border: 1px solid white;
         width: 150px;
         border-radius: 30px;
         background-color: white;
         text-align: center;
+        margin: 10% auto;
     }
 
     &__button{
@@ -202,12 +201,12 @@ body{
     &__darker{
         transform: translateX(100%);
         opacity: 0;
+        position: absolute;
+        z-index:-1;
     }
     &__menu{
         height: 100vh;
-        width: 90vw;
-        border: 1px $clr-blue-2 solid;
-        border-radius: 0 0 0 20px;
+        width: 90%;
         user-select: none;
         pointer-events: none;
         float: right;
@@ -215,8 +214,8 @@ body{
         top: 61px;
         color: white;
         background-color: $clr-blue-2;
-        padding: 0 20px 20px 20px;
         transform: translateX(100%);
+        //transform: translateY(-1%);
         transition: all 400ms cubic-bezier(0.55, 0, 0.1, 1);
 
         ul li{
@@ -251,6 +250,7 @@ body{
             user-select: all !important;
             pointer-events: all !important;
             transform: translateX(0%) !important;
+            //transform: translateY(-1%) !important;
         }
         &__darker{
             background: black;
@@ -274,8 +274,14 @@ body{
     background-position: center top;
 }
 .about{
-    margin-top: 100px;
-    padding-bottom: 200px;
+    @media only screen and (max-width: 576px){
+        margin-top: 20px;
+        padding-bottom: 20px;
+    }
+    @media only screen and (min-width: 577px){
+        margin-top: 100px;
+        padding-bottom: 150px;
+    }
     &__img{
         @media only screen and (max-width: 992px){
             margin-top: 100px;
@@ -299,11 +305,17 @@ body{
         color: black;
     }
     &__button{
+        @media only screen and (max-width: 576px){
+            padding: 5px 40px 5px 40px;
+            margin: auto 13%;
+        }
+        @media only screen and (min-width: 577px){
+            padding: 5px 80px 5px 80px;  
+        }
         border: 3px solid $clr-blue-2;
         color: white;
         border-radius: 30px;
         background-color: $clr-blue-2;
-        padding: 5px 80px 5px 80px;
         transition: ease-in 200ms;
         &:hover{
             background-color: white;
